# dungeon

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
scripts/: embed_assets.py
src/: game.cpp  gen_params.h  map_gen.cpp  map_gen.h  rect.h  vec2.h
src/asset_storage/: entity_animation_enum.h  entity_animation_storage.cpp  entity_animation_storage.h  entity_move_animation_list.h  font_bank.cpp  font_bank.h  item_rc_list.h  item_rc_storage.cpp  item_rc_storage.h  texture_bank.cpp  texture_bank.h  tile_sprite_list.h  tile_sprite_storage.cpp  tile_sprite_storage.h
src/components/: armor.h  character.h  character_update_tags.h  chest.h  coins.h  description.h  door.h  gate.h  inventory.cpp  inventory.h  item.h  move_animation_id.h  nonpassable.h  npc.h  opaque.h  pending_animation.h  player.h  portal.h  position.cpp  position.h  render_component.h  stackable_item.cpp  stackable_item.h  weapon.h
src/components/body/: body.cpp  body.h  body_attributes.h  body_graph.h  body_part.cpp  body_part.fwd.h  body_part.h  body_part_attributes.h  body_part_stats.h  body_stats.h
src/entities/: chest.cpp  chest.h  cloneEntity.cpp  cloneEntity.h  door.cpp  door.h  entity.cpp  entity.fwd.h  entity.h  gate.cpp  gate.h  player.cpp  player.h  portal.cpp  portal.h
src/entities/characters/: body_templates.cpp  body_templates.h  player.cpp  player.h
src/entities/characters/npc/: infected_zombie.cpp  infected_zombie.h  smuggler.cpp  smuggler.h
src/entities/items/: armors.cpp  armors.h  createItem.cpp  createItem.h  item_ids.h
src/entities/npc/: infected_zombie.cpp  infected_zombie.h  smuggler.cpp  smuggler.h
src/gfx/: animated_sprite.cpp  animated_sprite.h  animated_sprite_frames.cpp  animated_sprite_frames.h  animation.cpp  animation.h  combined_texture.cpp  combined_texture.h  copyable_rendertexture.cpp  copyable_rendertexture.h  level_tile_map.cpp  level_tile_map.h  level_tile_map_chunk.cpp  level_tile_map_chunk.h  primitive_sprite.cpp  primitive_sprite.h  tile_sprite_data.cpp  tile_sprite_data.h  view_follower.cpp  view_follower.h  view_range.cpp  view_range.h  view_range_overlay.cpp  view_range_overlay.h  zlevels.h
src/gfx/animated_sprite/: animated_sprite.cpp  animated_sprite.h  animated_sprite_frames.cpp  animated_sprite_frames.h
src/gfx/level_tile_map/: level_tile_map.cpp  level_tile_map.h  level_tile_map_chunk.cpp  level_tile_map_chunk.h  level_tile_map_texture.cpp  level_tile_map_texture.h
src/gfx/utils/: mergeTexture.cpp  mergeTexture.h  setQuad.cpp  setQuad.h  visibleAreaBounds.cpp  visibleAreaBounds.h
src/global/: gui_component_stack.h  window.h
src/gui/: anchor_position_info.h  button.cpp  button.h  button_appearance.h  frame.cpp  frame.h  frame_appearance.h  gauge_bar.cpp  gauge_bar.h  gauge_bar_appearance.h  gui_component.cpp  gui_component.h  gui_element.cpp  gui_element.h  position_info.h  scroll.cpp  scroll.h  scroll_appearance.h  size_info.h  surface.cpp  surface.h  text.cpp  text.h  text_appearance.h
src/gui/component_stack/: component_stack.cpp  component_stack.h  component_stack_helper.cpp  component_stack_helper.h
src/gui/hud/: controls.cpp  controls.h  hud.cpp  hud.h  player_frame.cpp  player_frame.h  quick_select.cpp  quick_select.h  stat_bar.cpp  stat_bar.h
src/gui/inventory/: body_inventory.cpp  body_inventory.h  body_inventory_entry.cpp  body_inventory_entry.h  dual_inventory.cpp  dual_inventory.h  inventory.cpp  inventory.h  item_swapper.cpp  item_swapper.h  player_inventory.cpp  player_inventory.h
src/gui/inventory/common/: drawItem.cpp  drawItem.h
src/gui/primitives/: apperance_common.h
src/gui/primitives/button/: button.cpp  button.h  button_appearance.h
src/gui/primitives/frame/: frame.cpp  frame.h  frame_appearance.h
src/gui/primitives/gauge_bar/: gauge_bar.cpp  gauge_bar.h  gauge_bar_appearance.h
src/gui/primitives/list/: list.cpp  list.h  list_appearance.h
src/gui/primitives/scroll/: scroll.cpp  scroll.h  scroll_appearance.h
src/gui/primitives/text/: text.cpp  text.h  text_appearance.h
src/gui/stats/: body_stats.cpp  body_stats.h
src/gui/world_context_menu/: entity_context_menu.cpp  entity_context_menu.h  world_context_menu.cpp  world_context_menu.h
src/input/: input.cpp  input.h
src/level/: door.cpp  door.h  door_controller.cpp  door_controller.h  entrance.cpp  entrance.h  level.cpp  level.fwd.h  level.h  level_params.h  level_structure.cpp  level_structure.h  moveEntity.cpp  moveEntity.h  portal.h  tile.h  tile_reveal_mask.cpp  tile_reveal_mask.h  tile_sprite_id_enum.h  tile_visibility_info.cpp  tile_visibility_info.h  usePortal.cpp  usePortal.h  visibleTiles.cpp  visibleTiles.h
src/level_gen/: createLevelStructure.cpp  createLevelStructure.h  gen_params.h  level_structure_decorator.cpp  level_structure_decorator.h  level_structure_gen.cpp  level_structure_gen.h  level_structure_generator.cpp  level_structure_generator.h  level_structure_params.h
src/utils/: quadtree.h  rand.cpp  rand.h  rect.h  sf_vector2_hash.h  sf_vector2_utils.h  tile_visibility.h  utf8ToUtf32.cpp  utf8ToUtf32.h  vec2.h
src/world/: world.cpp  world.fwd.h  world.h  world_params.h
